chore: Rever to previous mutable list implementation